<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.pttrn42.graphs</groupId>
  <artifactId>kiwiland-commute</artifactId>
  <version>1.0-SNAPSHOT</version>

  <name>kiwiland-commute</name>

  <properties>
    <java.version>14</java.version>
    <junit.jupiter.version>5.6.2</junit.jupiter.version>
  </properties>

	<dependencies>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>${junit.jupiter.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

  <build>
    <plugins>
      <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.8.1</version>
          <configuration>
              <release>14</release>
              <compilerArgs>
                  <arg>--enable-preview</arg>
              </compilerArgs>
              <forceJavacCompilerUse>true</forceJavacCompilerUse>
              <parameters>true</parameters>
          </configuration>
      </plugin>

      <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.0.0-M5</version>
          <configuration>
              <argLine>--enable-preview</argLine>
          </configuration>
      </plugin>
    </plugins>
  </build>
</project>
